# mathgame

./: .gitignore  README.md  furtherDevPlan.md  gui.py  logic.py  main.py  pyproject.toml  requirements.txt  scores.db  webenginetest.py
.github/workflows/: deploy_docs.yml
app/: db.py  gui.py  logic.py  main.py  questions.py  scores.db  style.qss
docs/: conf.py  index.rst  modules.rst
docs/_build/: .buildinfo  .buildinfo.bak  app.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  webenginetest.html
docs/_build/.doctrees/: app.doctree  environment.pickle  index.doctree  modules.doctree  webenginetest.doctree
docs/_build/_modules/: gui.html  logic.html
docs/_build/_modules/app/: db.html  gui.html  logic.html  main.html
docs/_build/_sources/: app.rst.txt  webenginetest.rst.txt
docs/_build/html/: .buildinfo  app.html  genindex.html  index.html  modules.html  objects.inv  searchindex.js
docs/_build/html/.doctrees/: app.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/_modules/: gui.html  index.html  logic.html
docs/_build/html/_modules/app/: db.html  gui.html  logic.html  main.html
docs/source/: conf.py  db.rst  index.rst  modules.rst  questions.rst
mathgame.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
